@@ -29,6 +29,9 @@ TOOLKIT
   * CloudFront Service
 
 - Added support for setting Default Root Object for CloudFront distributions.
+- Modified CloudFrontService#signUrl and #signUrlCanned to accept raw resource
+  URL or path strings, instead of expressing all resources as HTTP URLs. This
+  allows for URL signing of HTTPS and RTMP streaming resources.  
 
   * SOAP implementation
 
